--- a/vuejs/01-vue-cli/package.json
+++ b/vuejs/01-vue-cli/package.json
@@ -15,6 +15,10 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^3.4.3",
+    "@storybook/addon-links": "^3.4.3",
+    "@storybook/addon-storysource": "^3.4.3",
+    "@storybook/addon-viewport": "^3.4.3",
     "@storybook/vue": "^3.4.3",
     "@vue/cli-plugin-babel": "^3.0.0-beta.9",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.9",
