--- a/vuejs/01-vue-cli/package.json
+++ b/vuejs/01-vue-cli/package.json
@@ -6,6 +6,7 @@
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "test": "vue-cli-service test",
+    "test:watch": "vue-cli-service test --watch",
     "lint": "vue-cli-service lint",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
